--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <!-- Write your HTML in this file -->
+
+
+<!DOCTYPE html>
+
+<html>
+  
+  <head>
+    
+  </head>
+  
+  <body>
+    <title>Hello</title>
+  </body>
+  
+  
+  
+  
+</html>
